--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.mjs",
   "type": "module",
   "scripts": {
-    "test": "nodemon app.js"
+    "test": "nodemon App.js"
   },
   "repository": {
     "type": "git",
